# dreamdrugs

./: .gitignore  .travis.yml  README.md  certificate-generation.sh  clean_dangling.sh  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  mirador_example_command.sh  nginx.conf  skaffold.yaml  up_prod.sh
.github/workflows/: ci.yml  deploy.yml  main.yml
backend/: .flake8  .gitignore  .pylintrc  Dockerfile  Pipfile  app.py  collage.py  dev.dockerfile  pyproject.toml  requirements.txt  run.py  run.sh  wsgi.py
backend/dreambox/: __init__.py  _base.py  glitch.py  inception5h.py  logging.py  progress.py  times.py  utils.py  validators.py
backend/dreamdrugs/: __init__.py  _base.py  inception5h.py  logging.py  utils.py  validators.py
backend/tests/: test_validators.py
deploy/: kustomization.yaml
deploy/backend/: deployment.yaml  service.yaml
deploy/dreambox/: Chart.yaml  values.yaml
deploy/dreambox/templates/: _helpers.tpl  backend.yaml  cloudflare.yaml  frontend.yaml  nginx.yaml
deploy/dreamdrugs/: Chart.yaml  values.yaml
deploy/secrets/: docker-credentials.yaml
frontend/: .babelrc  .eslintrc  .eslintrc.json  .gitignore  Dockerfile  jest.config.js  package-lock.json  package.json  run.sh  server.js  webpack.config.js  webpack.production.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js
misc/: .gitignore  inception5h-class.ipynb  inception5h.ipynb
misc/.ipynb_checkpoints/: inception5h-class-checkpoint.ipynb
nginx/: Dockerfile  dreambox_project  dreamdrugs_project
(+29 files in other folders)
